2005-08-31 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Icons in smaller sizes (forwardport)
        * Work on configuration dialogs. Not finished yet.

2005-08-23 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Better KGet mime icon (forwardport)
        * Remove artifacts from images (forwardport)
        * Add action to show / hide drop target
        * Add some actions to maintoolbar (new download, show / hide drop target)
        * Fix a problem with the configuration dialog (wasn't shown the first call)
        * Remove some compiler warnings

2005-08-12 Dario Massarin <nekkar@libero.it>
        * Make the configuration dialogs compile again, but we have to 
        completely redesign them, since they usually refer to settings
        that are not available anymore.
        * Fix a problem in the scheduler introduced with the last commit.

2005-08-11 Dario Massarin <nekkar@libero.it>
        * More work on the ViewsContainer class. Now we have 3 buttons:
        "Downloads", "Finished" and "Transfer Details" one. The last one
        is associated with a QMenu that lets you select which transfer to 
        visualize.
        * Fixed problem when stopping delayed transfers.

2005-08-06 Dario Massarin <nekkar@libero.it>
        * Change the way we handle the Transfer actions
        * Reoganize the gui, introducing a new ViewsContainer class.

2005-08-02 Dario Massarin <nekkar@libero.it>
        Big commit:
        * KGet ported to qt4. Here there are some issues that still need to be
        resolved. For example I had to disable the bittorrent plugin becouse
        currently I don't know how to make it compile again.
        * Started implementing a new sidebar with qt3. Then I switched to qt4 and
        realized I had to rewrite it, since I made use of the QListBox classes :-(
        So I did. I used the QVBoxLayout class.
        More to come..

2005-07-29 Dario Massarin <nekkar@libero.it>
        Many changes: