@@ -1,3 +1,6 @@
+2005-09-02 Urs Wolfer <u.wolfer @ bluewin.ch>
+        * *Replace the old droptarget icon with the nuvola one
+
 2005-08-31 Urs Wolfer <u.wolfer @ bluewin.ch>
         * Icons in smaller sizes (forwardport)
         * Work on configuration dialogs. Not finished yet.
